Fix(header): remove external padding on mobile design for menu icon

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -68,7 +68,6 @@
         }
         .side-bar-icon{
             display: flex;
-            padding: 0px 30px;
             cursor: pointer;
         }
     }
